--- a/FrontendCNE/FrontendCNE/Views/Shared/_Layout.cshtml
+++ b/FrontendCNE/FrontendCNE/Views/Shared/_Layout.cshtml
@@ -176,7 +176,7 @@
     <!-- endinject -->
     <!-- plugin js for this page -->
     <script src="~/vendors/progressbar.js/progressbar.min.js"></script>
-    <!-- <script src="vendors/chart.js/Chart.min.js"></script> -->
+     @*<script src="vendors/chart.js/Chart.min.js"></script>*@ 
     <!-- End plugin js for this page -->
     <!-- Custom js for this page-->
     <!-- <script src="js/dashboard.js"></script> -->
