--- a/FrontendCNE/FrontendCNE/Views/Votacion/Presidentes.cshtml
+++ b/FrontendCNE/FrontendCNE/Views/Votacion/Presidentes.cshtml
@@ -319,6 +319,10 @@
 
 
         $(document).ready(function () {
+
+        
+
+
             var url3 = "https://localhost:44377/Diputados/List" ;
             var url = "https://localhost:44377/Presidentes/List";
             /**/
@@ -327,45 +331,45 @@
             $("#dni").val(localStorage.getItem("id"));
             
                 // Agrega un evento al botón de "Votar"
-                $("#Vot").click(function (event) {
-                    //event.preventDefault(); // Evitar el envío del formulario por defecto
+                //$("#Vot").click(function (event) {
+                //    //event.preventDefault(); // Evitar el envío del formulario por defecto
 
                     
 
-                    // Itera sobre los checkboxes y agrega los IDs de los diputados seleccionados al array
-                    $("input[name='optionCandidatoD']:checked").each(function () {
-                        diputadosSeleccionados.push($(this).data("idcandidatoD"));
-                    });
+                //    // Itera sobre los checkboxes y agrega los IDs de los diputados seleccionados al array
+                //    $("input[name='optionCandidatoD']:checked").each(function () {
+                //        diputadosSeleccionados.push($(this).data("idcandidatoD"));
+                //    });
 
-                    // En este punto, diputadosSeleccionados contiene los IDs de todos los diputados seleccionados
-                    console.log(diputadosSeleccionados);
+                //    // En este punto, diputadosSeleccionados contiene los IDs de todos los diputados seleccionados
+                //    console.log(diputadosSeleccionados);
 
 
-                    fetch('https://localhost:44377/Diputados/Create', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify(diputadosSeleccionados)
-                    })
-                        .then(function (response) {
-                            if (!response.ok) {
-                                throw new Error('Hubo un problema al enviar los datos al servidor.');
-                            }
-                            return response.json();
-                        })
-                        .then(function (data) {
-                            // Manejar la respuesta del servidor si es necesario
-                        })
-                        .catch(function (error) {
-                            console.error('Error:', error);
-                        });
-                    // Ahora puedes enviar estos IDs al controlador a través de una solicitud fetch, como ya lo estás haciendo
-                    // Utiliza el array diputadosSeleccionados en el cuerpo de la solicitud fetch
-                    // ...
+                //    fetch('https://localhost:44377/Diputados/Create', {
+                //        method: 'POST',
+                //        headers: {
+                //            'Content-Type': 'application/json'
+                //        },
+                //        body: JSON.stringify(diputadosSeleccionados)
+                //    })
+                //        .then(function (response) {
+                //            if (!response.ok) {
+                //                throw new Error('Hubo un problema al enviar los datos al servidor.');
+                //            }
+                //            return response.json();
+                //        })
+                //        .then(function (data) {
+                //            // Manejar la respuesta del servidor si es necesario
+                //        })
+                //        .catch(function (error) {
+                //            console.error('Error:', error);
+                //        });
+                //    // Ahora puedes enviar estos IDs al controlador a través de una solicitud fetch, como ya lo estás haciendo
+                //    // Utiliza el array diputadosSeleccionados en el cuerpo de la solicitud fetch
+                //    // ...
 
-                    // Aquí debería ir tu código para enviar los datos al servidor mediante fetch
-                });
+                //    // Aquí debería ir tu código para enviar los datos al servidor mediante fetch
+                //});
           
 
 
@@ -541,6 +545,7 @@
                     }
                 })
                 .catch(error => console.log('Authorization failed : ' + error.message));
+            
 
             //fetch(url3)
             //    .then(function (result) {
