--- a/FrontendCNE/FrontendCNE/Views/Votacion/_Create.cshtml
+++ b/FrontendCNE/FrontendCNE/Views/Votacion/_Create.cshtml
@@ -29,6 +29,17 @@
                 <input asp-for="dni" class="form-control" value="" />
                 <span asp-validation-for="dni" class="text-danger"></span>
             </div>
+            @{
+                // Declaración de una lista de enteros
+                List<int> listaEnteros = new List<int>();
+
+                // Agregar elementos a la lista
+                listaEnteros.Add(3);
+                listaEnteros.Add(5);
+                
+                // y así sucesivamente...
+            }
+            <input type="hidden" name="listaEnteros" value="3,5" />
             <div class="form-group">
                 <input type="submit" value="Votar" id="Vot" name="vot" class="btn btn-primary" />
             </div>
@@ -39,4 +50,23 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+<script>
+        //document.getElementById("Vot").addEventListener("click", function () {
+        //    var listaEnteros = document.getElementById("listaEnteros").value;
+        //    var formData = new FormData(document.getElementById("votoForm"));
+        //    formData.append("listaEnteros", listaEnteros);
+
+        //    // Enviar la solicitud AJAX
+        //    var xhr = new XMLHttpRequest();
+        //    xhr.open("POST", "/Voto/Create");
+        //    xhr.setRequestHeader("RequestVerificationToken", document.getElementsByName("__RequestVerificationToken")[0].value);
+        //    xhr.onreadystatechange = function () {
+        //        if (xhr.readyState === 4 && xhr.status === 200) {
+        //            // Redirigir o realizar otras acciones después de que la solicitud se complete correctamente
+        //            window.location.href = "/Votacion/Index";
+        //        }
+        //    };
+        //    xhr.send(formData);
+        //});
+</script>
 }
